# Monosonet

./: .dockerignore  .env.example  COMMENTING_IMPLEMENTATION.md  DATABASE_RENAME_FIX_SUMMARY.md  INTEGRATION_GUIDE.md  Justfile  PASSPHRASE_IMPLEMENTATION.md  PLATFORM_FEATURES.md  QUICK_START_ENVIRONMENT.md  README.md  SECURITY_CHECKLIST.md  Sonet-client.md  app.json  package.json  pnpm-lock.yaml  rebrand.sh  scaffold.sh  tatus
moderation/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
moderation/config/: default.toml  production.toml
moderation/docs/: COMPLIANCE_GUIDE.md  PRODUCTION_READINESS.md
moderation/examples/: client_integration.rs  compliance_example.rs
moderation/proto/: moderation.proto
moderation/src/: config.rs  errors.rs  lib.rs  main.rs  utils.rs
moderation/src/api/: compliance.rs  grpc.rs  middleware.rs  mod.rs  routes.rs  state.rs
moderation/src/core/: actions.rs  classifier.rs  compliance.rs  languages.rs  ml_models.rs  mod.rs  observability.rs  reports.rs  rules.rs  signals.rs
moderation/src/services/: audit_log.rs  ml_inference.rs  mod.rs  notif.rs
moderation/src/storage/: db.rs  models.rs
moderation/tests/: classifier_test.rs  integration.rs  rules_test.rs
overdrive-serving/: CMakeLists.txt  README.md
overdrive-serving/proto/: overdrive.proto
overdrive-serving/src/: faiss_index.cpp  faiss_index.h  main.cpp  ranker_service.cpp  ranker_service.h  redis_client.cpp  redis_client.h  server.cpp  server.h
sonet/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY_IMPLEMENTATION.md  conanfile.txt  docker-compose.env.yml  docker-compose.production.yml  docker-compose.yml
sonet-server/src/services/media_service/: CMakeLists.txt  logger.h  main.cpp  service.h
sonet-server/src/services/minimal/: CMakeLists.txt  notification.grpc.pb.h  search_server.cpp
sonet-server/src/services/notification_service/: CMakeLists.txt  main.cpp
sonet-server/src/services/user_service/: CMakeLists.txt  IMPLEMENTATION_COMPLETE.md
sonet-server/src/services/video_feed_service/: CMakeLists.txt  service.cpp
sonet-server/tests/: CMakeLists.txt
sonet/build-cpp/: CMakeCache.txt  Makefile  cmake_install.cmake
sonet/build-cpp/src/gateway/: Makefile
sonet/cmake/: FindgRPC.cmake
sonet/config/development/: database.json  gateway.json  redis.json  services.json
sonet/database/: README.md
sonet/database/migrations/: 001_create_moderation_tables.sql
sonet/database/schemas/: analytics_schema.sql  follow_schema.sql  ghost_reply_schema.sql  media_schema.sql  notification_schema.sql  search_schema.sql
sonet/deployment/kubernetes/: beats-metricbeat-daemonset.yaml
sonet/docs/: LIVE_DEPLOYMENT_COMPLETE.md  PRIVATE_PROFILES_INTEGRATION_COMPLETE.md  PRODUCTION_DEPLOYMENT.md
sonet/docs/api/: authentication.md  endpoints.md  rate-limiting.md
sonet/monitoring/: prometheus.yml
sonet/monitoring/elk/metricbeat/: metricbeat.yml
sonet/monitoring/jaeger/: jaeger-config.yml
sonet/monitoring/prometheus/: prometheus.yml
sonet/nginx/: nginx.conf
sonet/proto/: CMakeLists.txt  grpc_stub.h  json_stub.h
sonet/proto/common/: pagination.proto  timestamp.proto  video_types.proto
sonet/proto/services/: fanout.proto  media.proto  note.proto  note_service.proto  notification.proto  search.proto  stub_protos.h  timeline.proto  user.proto  video_feed.proto
sonet/scripts/: configure-live-deployment.sh  create-founder-account-secure.sh  create-founder-account.sh  go-live.sh  quick-deploy.sh  setup-neo-qiss-account.sh  setup-production.sh
sonet/src/common/database/: connection_pool_optimizer.h  database_connection.cpp  database_connection.h  query_cache.cpp
sonet/src/config/: environment.cpp  environment.hpp
sonet/src/core/logging/: logger.h
sonet/src/database/: database.ts
sonet/src/gateway/: CMakeLists.txt  gateway.cpp  gateway.h  main.cpp  responses.h
sonet/src/gateway/auth/: jwt_handler.cpp
sonet/src/gateway/controllers/: api_controller.h
sonet/src/gateway/middleware/: auth_middleware.h  cors_middleware.h  logging_middleware.h
sonet/src/gateway/rate_limiting/: rate_limiter.cpp  rate_limiter.h  token_bucket.h
sonet/src/gateway/routes/: moderation.go
sonet/src/repositories/: video-feed.repository.ts
sonet/src/services/: CMakeLists.txt  README.md  content-filtering.service.ts  real-time-update.service.ts  user-engagement.service.ts  video-feed.ts  video-ml.service.ts
sonet/src/services/drafts_service/: Dockerfile  go.mod  main.go
sonet/src/services/follow_service/: CMakeLists.txt  main.cpp  service.cpp  service.h
sonet/src/services/list_service/: Dockerfile  go.mod  main.go
sonet/src/services/media_service/: CMakeLists.txt  README.md  logger.cpp  main.cpp  service.cpp  service.h
sonet/src/services/messaging_service/: CMakeLists.txt  DOUBLE_RATCHET_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MILITARY_GRADE_E2EE.md  README.md  main.cpp  messaging_service.cpp  run_tests.sh
sonet/src/services/minimal/: CMakeLists.txt  notification_server.cpp  search.grpc.pb.h  search_server.cpp
sonet/src/services/moderation_service/: Dockerfile.production  service.h
sonet/src/services/note_service/: CMakeLists.txt  main.cpp  note_service_orchestrator.h  service.cpp  service.h
sonet/src/services/notification_service/: CMakeLists.txt  main.cpp  service.cpp  service.h
sonet/src/services/search_service/: CMakeLists.txt  main.cpp  service.cpp  service.h
sonet/src/services/starterpack_service/: Dockerfile  go.mod  main.go
sonet/src/services/timeline_service/: CMakeLists.txt  cache.cpp  content_adapters.cpp  content_filter.cpp  implementations.h  main.cpp  ranking_engine.cpp  realtime_notifier.cpp  service.cpp  service.h  stub_protos.h
sonet/src/services/user_service/: CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  complete_example.cpp  main.cpp
sonet/src/services/user_service_go/: Dockerfile
sonet/src/services/video_feed_service/: service.cpp  service.h  video_feed_repository.h  (+1 more)
sonet/tests/: CMakeLists.txt  test_main.cpp
(+1718 files in other folders)
