[package]
name = "moderation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Sonet Team <dev@sonet.example>"]
description = "Sonet moderation service: rules engine, classifiers, and APIs"
repository = "https://example.com/sonet/moderation"

[dependencies]
# Web
axum = { version = "0.7", features = ["macros"] }
tonic = { version = "0.12", features = ["transport"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "timeout", "decompression-gzip", "compression-gzip"] }
axum-prometheus = "0.6"

# Async
tokio = { version = "1.39", features = ["full"] }
async-stream = "0.3"

# Serde & JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
dotenvy = "0.15"
config = "0.14"

# DB
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0"
once_cell = "1.19"
aho-corasick = "1.1"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }